# constructum

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  docker-compose.yml  docker_build_and_push.sh  flake.nix  load_env_variables.ps1
constructum-ui/: build_self_signed.sh  package-lock.json  package.json  set_up_nexjs_proxy.sh  set_up_nextjs_proxy.sh
constructum-ui/app/: globals.css  headbar.tsx  header.tsx  layout.tsx  main_body.tsx  page.tsx  signin.tsx  user_info.ts
constructum-ui/app/jobs/: job.tsx  job_row.tsx  layout.tsx  page.tsx
constructum-ui/app/jobs/[jobId]/: details.tsx  log_view.tsx  page.tsx  step_row.tsx
constructum-ui/app/repos/: layout.tsx  page.tsx  repo.tsx  repo_register_buttons.tsx  repo_row.tsx
constructum-ui/app/repos/[repoId]/: page.tsx
constructum-ui/pages/api/auth/: [...nextauth].ts
sql/: create_db.sql
src/: health.rs  lib.rs
src/client/: error.rs  mod.rs  tests.rs
src/config/: mod.rs
src/git/: mod.rs
src/kube/: error.rs  mod.rs  secret.rs  utils.rs
src/pipeline/: completed.rs  job.rs  materialized_secret.rs  mod.rs  pipeline_structs.rs
src/redis/: error.rs  mod.rs
src/s3buckets/: mod.rs
src/server/: error.rs  job_db.rs  job_spawning.rs  mod.rs
src/server/api/: job.rs  mod.rs  repo.rs  step.rs
src/server/api/job/: db.rs  endpoints.rs  mod.rs  model.rs
src/server/api/repo/: db.rs  endpoints.rs  mod.rs  model.rs  system.rs
src/server/api/step/: db.rs  endpoints.rs  mod.rs  model.rs
src/state/: client.rs  mod.rs  server.rs
src/utils/: http_reqwest.rs  mod.rs
src/webhook/: error.rs  mod.rs  payload.rs
(+5 files in other folders)
