[package]
name = "constructum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_23"] }
serde = "1.0.152"
serde_json = "1.0.92"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
tokio = { version = "1.25.0", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres", "uuid" ] }
serde_yaml = "0.9.17"
toml = "0.7.1"
git2 = "0.16.1"
